--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,9 +16,9 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a id="report" href="/summary">Report<span class="hide fa fa-arrow-up report-tips"></a></li>
-                <li class="{% if active['add'] %}active{% endif %}"><a id="add" href="/home" name="add">Add<span class="hide fa fa-arrow-up add-tips"></span></a></li>
-                <li class="{% if active['reset'] %}active{% endif %}"><a id="reset" href="/home" name="reset">Reset<span class="hide fa fa-arrow-up reset-tips"></a></li>
+                <li class="{% if active['report'] %}active{% endif %}"><a id="report" href="/summary">Report<span class="hide fa fa-arrow-up report-tips"></a></li>
+                <li class="{% if active['add'] %}active{% endif %}"><a id="add" href="/home">Add<span class="hide fa fa-arrow-up add-tips"></span></a></li>
+                <li class="{% if active['reset'] %}active{% endif %}"><a id="reset" href="/home">Reset<span class="hide fa fa-arrow-up reset-tips"></a></li>
             </ul>
         </div>
     </div>
