--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,11 @@
     <!-- load dependency styles -->
 
     <!-- load site styles -->
+    <link rel="stylesheet" href="/assets/css/ext/bootstrap.min.css" />
     <link rel="stylesheet" href="/assets/css/site.css" />
     <!-- load external library -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
 
 <body>
@@ -21,9 +22,12 @@
 
     <!-- load external scripts -->
     <!-- load site scripts -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script> -->
+    <script src="/assets/js/ext/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="/assets/js/ext/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/assets/js/ext/Chart.min.js" type="text/javascript"></script>
     <script src="/assets/js/survey.js" type="text/javascript"></script>
     <script src="/assets/js/summary.js" type="text/javascript"></script>
     <script src="/assets/js/site.js" type="text/javascript"></script>
