--- a/css/about.css
+++ b/css/about.css
@@ -8,17 +8,21 @@
 }
 
 @media(max-width: 1000px) {
-    .about-page-header p{
+    .about-page-header p {
         display: none !important;
     }
     .about-page-header::after {
         content: "Please expand the screen";
-        background-color: #d31e17;
-        color: #fff;
-        padding: 10px;
-        border-radius: 8px;
-        font-size: 30px;
-        font-weight: 100;
+        background-color: #f2dede;
+        border-color: #ebcccc;
+        color: #a94442;
+        padding: .75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 1.5;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 }
@@ -50,10 +54,13 @@
 
 .jumbotron {
     position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .footer {
     position: absolute;
+    width: 100%;
     bottom: 0;
     right: 0;
 }
