--- a/templates/survey.html
+++ b/templates/survey.html
@@ -4,7 +4,7 @@
 <div class="jumbotron survey-body">
     <div class="survey-header">
         <a href="/summary" class="btn btn-primary btn-lg summary-option-button summary-button">Report</a>
-        <h2>Customer Survey</h2>
+        <h1 class="text-center">Customer Survey</h1>
         <div class="survey-seq"><span class="seq-numo">{{seq[0]}}</span>/<span class="seq-demo">{{seq[-1]}}</span></div>
     </div>
     <div class="survey-context">
