--- a/css/graph.css
+++ b/css/graph.css
@@ -2,29 +2,42 @@ canvas {
     max-height: 600px !important;
     width: auto !important;
 }
-@media(max-width: 1020px){
-    .data-chart canvas{
+
+@media(max-width: 1020px) {
+    .data-chart canvas {
         display: none !important;
     }
-    .data-chart::after{
+    .data-chart::after {
         content: "Please expand the screen";
-        background-color: #d31e17;
-        color: #fff;
-        padding: 10px;
-        border-radius: 8px;
-        font-size: 30px;
-        font-weight: 100;
+        background-color: #f2dede;
+        border-color: #ebcccc;
+        color: #a94442;
+        padding: .75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 1.5;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 }
+
 .data-chart {
     display: flex;
     justify-content: center;
     margin: 0 auto 25px;
 }
 
-.summary-chart {
-    display: flex;
-    justify-content: center;
-    margin: 0 0 25px;
+.data-chart canvas {
+    box-shadow: 0 3px 12px #ddd;
+    background: #fff;
+    padding: 40px 20px 20px;
+    border-radius: 5px;
+    width: 500px !important;
+    height: 550px !important;
+}
+
+.data-chart canvas:hover {
+    cursor: pointer !important;
 }
