--- a/css/home.css
+++ b/css/home.css
@@ -9,12 +9,16 @@
     }
     .operations::after {
         content: "Please expand the screen";
-        background-color: #d31e17;
-        color: #fff;
-        padding: 10px;
-        border-radius: 8px;
-        font-size: 30px;
-        font-weight: 100;
+        background-color: #f2dede;
+        border-color: #ebcccc;
+        color: #a94442;
+        padding: .75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 1.5;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 }
@@ -69,6 +73,8 @@
     text-align: center;
 }
 
+.summary-text span {}
+
 .total-survey-answer {
     font-family: 'Varela Round', sans-serif !important;
     font-size: 18px;
@@ -79,7 +85,20 @@
     min-width: 30px;
     display: inline-block;
     line-height: normal;
+    vertical-align: super;
+}
+
+.total-survey-question {
+    font-size: 22px;
+    color: #d31e17;
+    padding: 5px;
+    border-radius: 5px;
+    min-width: 30px;
+    display: inline-block;
+    line-height: normal;
     vertical-align: text-bottom;
+    line-height: normal;
+    vertical-align: baseline;
 }
 
 .home-transition-decorator {
