--- a/css/summary.css
+++ b/css/summary.css
@@ -32,16 +32,23 @@
 }
 
 .summary-chart {
-    padding: 18px;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 25px;
+    background: #fff;
+    box-shadow: 0 3px 12px #ddd;
+    border-radius: 5px;
+    padding: 25px;
     cursor: pointer;
-    transition: all 0.6s;
+    transition: all 0.4s;
     margin: 25px auto;
-    max-width: 70%;
+    width: 500px !important;
+    height: auto;
 }
 
 .summary-chart:hover {
-    box-shadow: 0 0 7px #ccc;
-    transition: all 0.6s;
+    box-shadow: 0 3px 12px #bbb;
+    transition: all 0.4s;
 }
 
 @media(max-width: 1020px) {
@@ -50,12 +57,16 @@
     }
     .summary-chart::after {
         content: "Please expand the screen";
-        background-color: #d31e17;
-        color: #fff;
-        padding: 10px;
-        border-radius: 8px;
-        font-size: 30px;
-        font-weight: 100;
+        background-color: #f2dede;
+        border-color: #ebcccc;
+        color: #a94442;
+        padding: .75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 1.5;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 }
