--- a/css/summary.css
+++ b/css/summary.css
@@ -52,16 +52,18 @@
 }
 
 @media(max-width: 1020px) {
-    .summary-chart canvas {
+    .summary-chart {
         display: none !important;
     }
-    .summary-chart::after {
+    .summary-chart-group {
+        margin: 40px auto !important;
+    }
+    .summary-chart-group::after {
         content: "Please expand the screen";
         background-color: #f2dede;
         border-color: #ebcccc;
         color: #a94442;
         padding: .75rem 1.25rem;
-        margin-bottom: 1rem;
         border: 1px solid transparent;
         border-radius: .25rem;
         font-size: 19px;
