--- a/css/survey.css
+++ b/css/survey.css
@@ -33,7 +33,8 @@
 
 .survey-context h2 {
     text-align: center;
-    font-weight: 300;
+    font-weight: 400;
+    color: #337ab7;
     padding: 14px 20px;
     margin: 5px 0 20px;
     font-size: 26px !important;
