--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="jumbotron text-center">
     <div class="about-page-header">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/62/Tesla_Motors_Logo.svg" width="400">
+        <img src="../css/img/tesla-word.png">
         <h1>About The Project</h1>
         <p class="project-description">In order to better serve our customers, we may ask them questions to elicit additional information about their special needs and interests.</p>
         <h2>Contact us:</h2>
