--- a/templates/summary.html
+++ b/templates/summary.html
@@ -2,15 +2,17 @@
 
 {% block body %}
     <div class="jumbotron text-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/62/Tesla_Motors_Logo.svg" width="400">
+        <img src="../css/img/tesla-lg.png" title="Tesla" width="96" height="96">
         <h1>Survey Analysis</h1>
         <p>Here are the summaries:</p>
         <p class="summary-text">We collected <span class="total-survey-answer">{{total_survey_answer}}</span> survey results from <span class="total-survey-question">{{question_nums}}</span> questions</p>
-        {% for i in chart_nums %}
-        <div class="hide summary-chart">
-            <canvas id="summaryChart{{i}}" width="200" height="200"></canvas>
+        <div class="summary-chart-group">
+            {% for i in chart_nums %}
+            <div class="hide summary-chart">
+                <canvas id="summaryChart{{i}}" width="200" height="200"></canvas>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
         <div>
             <button id="build-summary" type="button" class="btn btn-primary btn-lg summary-button transition-button-focus"><span class="fa fa-arrow-right show-right"></span>Show Charts</button>
         </div>
@@ -20,6 +22,6 @@
             <span class="line">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         </div>
 
-        <a href="/survey" id="retake-survey" class="btn btn-danger btn-lg summary-button survey-start">Retake Survey</a>
+        <a id="start-survey" href="/survey" id="retake-survey" class="btn btn-danger btn-lg summary-button survey-start">Retake Survey</a>
     </div>
 {% endblock body%}
